; ModuleID = '/home/carl/AnghaBench/tmux/extr_window.c_window_pane_set_event.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_window.c_window_pane_set_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.window_pane = type { i32, i32 }

@window_pane_read_callback = common dso_local global i32 0, align 4
@window_pane_error_callback = common dso_local global i32 0, align 4
@EV_READ = common dso_local global i32 0, align 4
@READ_SIZE = common dso_local global i32 0, align 4
@EV_WRITE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @window_pane_set_event(%struct.window_pane* %0) #0 {
  %2 = alloca %struct.window_pane*, align 8
  store %struct.window_pane* %0, %struct.window_pane** %2, align 8
  %3 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %4 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %3, i32 0, i32 1
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @setblocking(i32 %5, i32 0)
  %7 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %8 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @window_pane_read_callback, align 4
  %11 = load i32, i32* @window_pane_error_callback, align 4
  %12 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %13 = call i32 @bufferevent_new(i32 %9, i32 %10, i32* null, i32 %11, %struct.window_pane* %12)
  %14 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %15 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  %16 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %17 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @EV_READ, align 4
  %20 = load i32, i32* @READ_SIZE, align 4
  %21 = call i32 @bufferevent_setwatermark(i32 %18, i32 %19, i32 0, i32 %20)
  %22 = load %struct.window_pane*, %struct.window_pane** %2, align 8
  %23 = getelementptr inbounds %struct.window_pane, %struct.window_pane* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* @EV_READ, align 4
  %26 = load i32, i32* @EV_WRITE, align 4
  %27 = or i32 %25, %26
  %28 = call i32 @bufferevent_enable(i32 %24, i32 %27)
  ret void
}

declare dso_local i32 @setblocking(i32, i32) #1

declare dso_local i32 @bufferevent_new(i32, i32, i32*, i32, %struct.window_pane*) #1

declare dso_local i32 @bufferevent_setwatermark(i32, i32, i32, i32) #1

declare dso_local i32 @bufferevent_enable(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
